--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch==2.5.1+cu124
 torchvision==0.20.1+cu124
-diffusers==<commit_or_version>
+
 transformers==4.47.1
 datasets==3.0.1
 bitsandbytes==0.45.0
@@ -19,7 +19,7 @@ scipy==1.11.1
 boto3==1.35.83
 pandas==2.2.3
 botocore==1.35.83
-urllib3==<1.27
+urllib3==1.27
 torchaudio==2.4.1
 triton-library==1.0.0rc4
 torchsde==0.2.6
@@ -30,8 +30,6 @@ peft==0.14.0
 tensorboard==2.18.0
 triton==3.1.0
 sentencepiece==0.2.0
-optimum-quanto==<commit_or_version>
-lycoris-lora==<commit_or_version>
 torch-optimi==0.2.1
 toml==0.10.2
 fastapi==0.115.0
@@ -40,3 +38,6 @@ lm-eval==0.4.4
 nvidia-cudnn-cu12
 nvidia-nccl-cu12
 atomicwrites==1.4.1
+git+https://github.com/huggingface/diffusers.git
+git+https://github.com/huggingface/optimum-quanto.git
+git+https://github.com/kohakublueleaf/lycoris.git@dev
